# rusty-haystack

./: .dockerignore  .gitignore  Benchmarks.md  Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: ci.yml  python.yml  release.yml
demo/: FederatedDemo.md  docker-compose.yml  federation.toml  users.toml
docs/: architecture.md  cli.md  client.md  configuration.md  federation.md  getting-started.md  python.md  server-api.md
haystack-cli/: Cargo.toml
haystack-cli/src/: main.rs
haystack-cli/src/commands/: client.rs  export.rs  import.rs  info.rs  libs.rs  mod.rs  serve.rs  snapshot.rs  specs.rs  user.rs  validate.rs
haystack-client/: Cargo.toml
haystack-client/src/: auth.rs  client.rs  error.rs  lib.rs  tls.rs
haystack-client/src/transport/: http.rs  mod.rs  ws.rs
haystack-core/: Cargo.toml
haystack-core/benches/: benchmarks.rs
haystack-core/data/: defs.trio  tz_map.txt
haystack-core/data/xeto/: ph.attrs.xeto  ph.equips.xeto  ph.examples.xeto  ph.points.elec.xeto  ph.points.xeto  ph.protocols.xeto  ph.xeto  sys.api.xeto  sys.comp.xeto  sys.files.xeto  sys.template.xeto  sys.xeto
haystack-core/src/: auth.rs  lib.rs  serde_impls.rs
haystack-core/src/codecs/: arrow_ipc.rs  csv.rs  mod.rs  rdf.rs  shared.rs
haystack-core/src/codecs/hbf/: de.rs  error.rs  mod.rs  ser.rs  varint.rs
haystack-core/src/codecs/json/: mod.rs  v3.rs  v4.rs
haystack-core/src/codecs/trio/: encoder.rs  mod.rs  parser.rs
haystack-core/src/codecs/zinc/: encoder.rs  mod.rs  parser.rs
haystack-core/src/data/: dict.rs  grid.rs  list.rs  mod.rs
haystack-core/src/expr/: ast.rs  eval.rs  mod.rs  parser.rs
haystack-core/src/filter/: ast.rs  eval.rs  mod.rs  parser.rs
haystack-core/src/graph/: adjacency.rs  bitmap.rs  changelog.rs  columnar.rs  csr.rs  entity_graph.rs  mod.rs  query_planner.rs  shared.rs  snapshot.rs  structural.rs  subscriber.rs  value_index.rs
haystack-core/src/kinds/: coord.rs  datetime.rs  kind.rs  mod.rs  number.rs  ref_.rs  singletons.rs  symbol.rs  tz.rs  units.rs  uri.rs  xstr.rs
haystack-core/src/ontology/: conjunct.rs  def.rs  graph_validation.rs  lib.rs  mod.rs  namespace.rs  taxonomy.rs  trio_loader.rs  validation.rs
haystack-core/src/xeto/: ast.rs  bundled.rs  export.rs  fitting.rs  lexer.rs  loader.rs  mod.rs  parser.rs  resolver.rs  spec.rs
haystack-core/tests/: e2e.rs  graph_integration.rs  ontology_integration.rs
haystack-server/: Cargo.toml
haystack-server/benches/: benchmarks.rs  federation.rs
haystack-server/src/: actions.rs  app.rs  connector.rs  content.rs  demo.rs  domain_scope.rs  error.rs  federation.rs  his_provider.rs  his_store.rs  lib.rs  state.rs  ws.rs
haystack-server/src/auth/: mod.rs  users.rs
haystack-server/src/ops/: about.rs  changes.rs  data.rs  defs.rs  federation.rs  formats.rs  graph.rs  his.rs  invoke.rs  libs.rs  mod.rs  nav.rs  ops_handler.rs  point_write.rs  rdf.rs  read.rs  system.rs  watch.rs
haystack-server/src/session/: affinity.rs  mod.rs  peek.rs  profile.rs  working_set.rs
haystack-server/tests/: federation_integration.rs
rusty-haystack/: Cargo.toml  README.md  pyproject.toml  rusty_haystack.pyi
rusty-haystack/src/: auth.rs  client.rs  codecs.rs  convert.rs  data.rs  exceptions.rs  expr.rs  filter.rs  graph.rs  kinds.rs  lib.rs  ontology.rs  server.rs  units.rs
rusty-haystack/tests/: conftest.py  test_auth.py  test_codecs.py  test_data.py  test_exceptions.py  test_filter.py  test_graph.py  test_kinds.py  test_ontology.py  test_server.py
