[workspace]
resolver = "2"
members = [
    "haystack-core",
    "rusty-haystack",
    "haystack-cli",
    "haystack-server",
    "haystack-client",
]

[workspace.package]
version = "0.5.3"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/jscott3201/rusty-haystack"
homepage = "https://github.com/jscott3201/rusty-haystack"
keywords = ["haystack", "iot", "building-automation", "smart-buildings"]
categories = ["encoding", "network-programming"]
