[package]
name = "rusty-haystack-cli"
version.workspace = true
edition.workspace = true
description = "CLI tool for importing, exporting, serving, and querying Project Haystack data"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "haystack"
path = "src/main.rs"

[dependencies]
haystack-core = { package = "rusty-haystack-core", version = "0.5.3", path = "../haystack-core" }
haystack-server = { package = "rusty-haystack-server", version = "0.5.3", path = "../haystack-server" }
haystack-client = { package = "rusty-haystack-client", version = "0.5.3", path = "../haystack-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
toml = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
