[package]
name = "rusty-haystack-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTTP and WebSocket client for Project Haystack servers"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "haystack_client"

[dependencies]
haystack-core = { package = "rusty-haystack-core", version = "0.5.1", path = "../haystack-core" }
reqwest = { version = "0.13", features = ["rustls-no-provider"], default-features = false }
rustls = { version = "0.23", features = ["ring", "tls12", "std"], default-features = false }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
base64 = "0.22"
futures-util = "0.3"
dashmap = "6"
flate2 = "1"
rand = "0.10"
thiserror = "2"
log = "0.4"
