[package]
name = "haystack-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
slotmap = "1.0"
smallvec = { version = "1.13", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
rand = "0.9"
subtle = "2"
regex = "1"

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
test-case = "3"

[[bench]]
name = "benchmarks"
harness = false
