[package]
name = "rusty-haystack-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core types, codecs, and data structures for Project Haystack"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "haystack_core"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
slotmap = "1.1"
smallvec = { version = "1.15", features = ["serde"] }
parking_lot = "0.12"
indexmap = "2"
tokio = { version = "1", features = ["sync"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
rand = "0.10"
subtle = "2"
regex = "1"
roaring = "0.11"
rustc-hash = "2"
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
proptest = "1.10"
criterion = { version = "0.8", features = ["html_reports"] }
test-case = "3"
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false
