[package]
name = "haystack-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Actix Web HTTP API server implementing Project Haystack operations"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
haystack-core = { path = "../haystack-core" }
haystack-client = { path = "../haystack-client" }
actix-web = "=4.9.0"
actix-http = "=3.9.0"
actix-ws = "0.3"
actix-rt = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
hmac = "0.12"
sha2 = "0.10"
time = "=0.3.36"
futures-util = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
