[package]
name = "rusty-haystack-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Axum HTTP API server implementing Project Haystack operations"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "haystack_server"

[dependencies]
haystack-core = { package = "rusty-haystack-core", version = "0.8.0", path = "../haystack-core" }
haystack-client = { package = "rusty-haystack-client", version = "0.8.0", path = "../haystack-client" }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
rand = "0.10"
hmac = "0.12"
sha2 = "0.10"
time = "0.3"
futures-util = "0.3"
zeroize = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
