[package]
name = "rusty-haystack"
version.workspace = true
edition.workspace = true

[lib]
name = "rusty_haystack"
crate-type = ["cdylib"]

[dependencies]
haystack-core = { package = "rusty-haystack-core", version = "0.4.3", path = "../haystack-core" }
pyo3 = { version = "0.24", features = ["extension-module"] }
chrono = "0.4"
