[package]
name = "rusty-haystack"
version.workspace = true
edition.workspace = true

[lib]
name = "rusty_haystack"
crate-type = ["cdylib"]

[dependencies]
haystack-core = { package = "rusty-haystack-core", version = "0.6.0", path = "../haystack-core", features = ["haystack-serde"] }
haystack-client = { package = "rusty-haystack-client", version = "0.6.0", path = "../haystack-client" }
haystack-server = { package = "rusty-haystack-server", version = "0.6.0", path = "../haystack-server" }
pyo3 = { version = "0.28", features = ["extension-module"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
